--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,7 +2,8 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_graph">
+    android:id="@+id/nav_graph"
+    app:startDestination="@id/splashFragment">
 
     <action
         android:id="@+id/action_global_signFlowFragment"
@@ -24,4 +25,9 @@
         android:name="com.fa.studentfu.presentation.sign.SignFlowFragment"
         android:label="SignFlowFragment"
         tools:layout="@layout/registration_fragment"/>
+    <fragment
+        android:id="@+id/splashFragment"
+        android:name="com.fa.studentfu.presentation.sign.splash.SplashFragment"
+        android:label="SplashFragment"
+        tools:layout="@layout/splash_fragment"/>
 </navigation>
