Сделал расписание и новости

--- a/app/src/main/res/layout/news_fragment.xml
+++ b/app/src/main/res/layout/news_fragment.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -13,10 +14,20 @@
         android:textAlignment="center"
         android:text="News"/>
 
+    <ProgressBar
+        android:id="@+id/news_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/news_list"
+        android:id="@+id/news_recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        />
+        tools:listitem="@layout/article_list_element" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
