--- a/app/src/main/res/color/toggle_button_stroke.xml
+++ b/app/src/main/res/color/toggle_button_stroke.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/green_fa" android:state_selected="true"/>
-    <item android:color="@color/green_fa" android:state_active="true"/>
     <item android:color="@color/green_fa" android:state_checked="true"/>
-    <item android:color="@color/black"/>
+    <item android:color="#858181"/>
 </selector>
