--- a/app/src/main/res/layout/timetable_fragment.xml
+++ b/app/src/main/res/layout/timetable_fragment.xml
@@ -5,21 +5,52 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.recyclerview.widget.RecyclerView
-        app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/timetable_list_element"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <TextView
-        android:layout_width="0dp"
+    <com.google.android.material.button.MaterialButtonToggleGroup
+        android:id="@+id/toggle_button_group"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:singleSelection="true"
+        app:selectionRequired="true"
+        app:checkedButton="@+id/timetable_btn_today">
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/timetable_btn_today"
+            android:text="@string/timetable_today"
+            style="@style/ToggleButton"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/timetable_btn_tomorrow"
+            android:text="@string/timetable_tmrw"
+            style="@style/ToggleButton"/>
+
+    </com.google.android.material.button.MaterialButtonToggleGroup>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guide_bottom_nav"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_end="70dp"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/timetable_recycler"
+        app:layout_constraintTop_toBottomOf="@id/toggle_button_group"
+        app:layout_constraintBottom_toBottomOf="@id/guide_bottom_nav"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        tools:listitem="@layout/timetable_list_element"/>
+
+    <ProgressBar
+        android:id="@+id/timetable_loader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:textAlignment="center"
-        android:text="Timetable"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
