--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="green_fa">#E11F6366</color>
     <color name="input_bg">#D8D8D8</color>
     <color name="bg_primary">#FBEFE2</color>
+    <color name="lecture">#6BE88E</color>
+    <color name="seminar">#EFCA6B</color>
 </resources>
