--- a/app/src/main/res/layout/references_fragment.xml
+++ b/app/src/main/res/layout/references_fragment.xml
@@ -2,22 +2,32 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/news_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"/>
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-        android:layout_width="0dp"
+    <ProgressBar
+        android:id="@+id/reference_progress"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:textAlignment="center"
-        android:text="Reference"/>
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guide_bottom_nav"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_end="70dp"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/reference_recycler"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/guide_bottom_nav"
+        tools:listitem="@layout/reference_list_element" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/create_reference"
@@ -31,4 +41,5 @@
         app:fabSize="normal"
         app:tint="@color/white"
         android:src="@drawable/ic_plus"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
